--- a/square-root/src/styles/Customize.css
+++ b/square-root/src/styles/Customize.css
@@ -72,6 +72,7 @@ td.o-modal-remove {
   border-radius: 6px;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .project-plants-modal h1 {
