--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -35,7 +35,7 @@
   display: block;
   width: 100%;
   height: auto;
-  vertical-align: middle;
+  /*vertical-align: middle;*/
 }
 
 .c-section {
@@ -181,70 +181,70 @@ dt:first-child {
 }
 
 .bounce {
-    -moz-animation: bounce 3s infinite;
-    -webkit-animation: bounce 3s infinite;
-    animation: bounce 3s infinite;
+  -moz-animation: bounce 3s infinite;
+  -webkit-animation: bounce 3s infinite;
+  animation: bounce 3s infinite;
+}
+@-moz-keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
   }
-  @-moz-keyframes bounce {
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-      -moz-transform: translateY(0);
-      transform: translateY(0);
-    }
-    40% {
-      -moz-transform: translateY(15px);
-      transform: translateY(15px);
-    }
-    60% {
-      -moz-transform: translateY(5px);
-      transform: translateY(5px);
-    }
+  40% {
+    -moz-transform: translateY(15px);
+    transform: translateY(15px);
   }
-  @-webkit-keyframes bounce {
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-    }
-    40% {
-      -webkit-transform: translateY(15px);
-      transform: translateY(15px);
-    }
-    60% {
-      -webkit-transform: translateY(5px);
-      transform: translateY(5px);
-    }
+  60% {
+    -moz-transform: translateY(5px);
+    transform: translateY(5px);
   }
-  @keyframes bounce {
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-      -moz-transform: translateY(0);
-      -ms-transform: translateY(0);
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-    }
-    40% {
-      -moz-transform: translateY(15px);
-      -ms-transform: translateY(15px);
-      -webkit-transform: translateY(15px);
-      transform: translateY(15px);
-    }
-    60% {
-      -moz-transform: translateY(5px);
-      -ms-transform: translateY(5px);
-      -webkit-transform: translateY(5px);
-      transform: translateY(5px);
-    }
+}
+@-webkit-keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
+  40% {
+    -webkit-transform: translateY(15px);
+    transform: translateY(15px);
+  }
+  60% {
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+  }
+}
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -moz-transform: translateY(15px);
+    -ms-transform: translateY(15px);
+    -webkit-transform: translateY(15px);
+    transform: translateY(15px);
+  }
+  60% {
+    -moz-transform: translateY(5px);
+    -ms-transform: translateY(5px);
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+  }
+}
 
 /*GRIDS*/
 
@@ -338,8 +338,10 @@ END OF HORIZONTAL SCROLL*/
 /* FLEXIBLE GRID */
 
 .c-grid--flexible {
+  column-width: 18em;
   -moz-column-width: 18em;
   -webkit-column-width: 18em;
+  column-gap: 1em;
   -moz-column-gap: 1em;
   -webkit-column-gap: 1em;
 }
