--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -252,24 +252,26 @@ section h1{
 .action-btn{
   background: none;
   border: none;
-  color: white;
-  font-size:25px;
+  color: black;
+  font-size:15px;
   font-weight: 700px;
   font-style: italic;
-  padding-right:5%;
-  margin-left: auto;
-  right:0;
-  position: absolute;
-  margin-top:5%;
-  margin-right:5%;
-  background-color: rgba(54, 54, 54, 0.3);
-  padding: 2%;
+  padding-top: 5%;
+  width:40%;
+  height:15%;
+  float:left;
+  text-align: left;
+  margin:0;
 }
 
 .cat-descr{
-  color: white;
+  color: var(--mainGrey);
   font-style: italic;
-  line-height:1.2em;
+  line-height:1.8em;
+  position:absolute;
+  bottom:15%;
+  width:80%;
+  right:10%;
 }
 
 .top-container{
@@ -277,6 +279,9 @@ section h1{
   bottom:5%;
 }
 
+.top-container h1{
+  color:var(--mainGrey);
+}
 
 /* SECTIONS FRONT PAGE*/
 
@@ -293,7 +298,6 @@ section p {
 
 section#first {
   background-image: url("../images/mainBackground.jpeg");
-  
   background-color: rgba(54, 54, 54, 0.3);
   position:relative;
   background-size: cover;
@@ -301,25 +305,25 @@ section#first {
 }
 
 section#second {
-  background-image: url("../images/landscape--rooftop.jpg");
+  background-image: url();
   background-size: cover;
   position:relative;
 }
 
 section#third {
-  background-image: url("../images/landscape--rainbed2.jpg");
+  background-image: url();
   background-size: cover;
   position:relative;
 }
 
 section#fourth {
-  background-image: url("../images/landscape--biodiversity.jpeg");
+  background-image: url();
   background-size: cover;
   position:relative;
 }
 
 section#fifth {
-  background-image: url("../images/portrait--indoor2.jpg");
+  background-image: url();
   background-size: cover;
   position:relative;
 }
