--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -268,20 +268,20 @@ section h1{
   color: var(--mainGrey);
   font-style: italic;
   line-height:1.8em;
-  position:absolute;
-  bottom:15%;
   width:80%;
-  right:10%;
+  padding-left:10%;
 }
 
 .top-container{
-  position:absolute;
-  bottom:5%;
+  position:relative;
+  bottom:0%;
+  height:100vh;
 }
 
 .top-container h1{
   color:var(--mainGrey);
 }
+
 
 /* SECTIONS FRONT PAGE*/
 
@@ -328,6 +328,12 @@ section#fifth {
   position:relative;
 }
 
+section#sixth {
+  background-image: url();
+  background-size: cover;
+  position:relative;
+}
+
 /*END SECTIONS */
 
 
@@ -368,8 +374,8 @@ section#fifth {
   margin-top:4%;
 }
 
-.hero-f-subcontainer button {
-  font-size: 0.8rem;
+.front-btn {
+  font-size: 1rem;
   padding-right:2%;
   padding-left:2%;
   padding-top:0.5%;
@@ -381,12 +387,33 @@ section#fifth {
   color: white;
 }
 
-.arrowDown {
-  width:3%;
-  display:block;
+.btn-scroll-down {
+  grid-column: 1 / 3;
+  grid-row: 3;
+  width:20%;
   margin-right: auto;
   margin-left: auto;
+}
+
+.btn-scroll-down-large{
   position:absolute;
-  bottom:15%;
+  bottom:20%;
   left:50%;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding:1%;
+  display:inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.arrowDown{
+  width:30%;
+  padding-left:15%;
+  float:right;
+}
+
+.is-white{
+  color:white;
 }
