--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -151,7 +151,7 @@ dt:first-child {
 
 .attachment-company_into {
   display: inline-block;
-  max-width: 100%;
+  max-width: 60%;
   height: auto;
   vertical-align: middle;
 }
@@ -256,6 +256,17 @@ dt:first-child {
     -webkit-transform: translateY(5px);
     transform: translateY(5px);
   }
+}
+
+.featured-concept--h1 {
+  color: rgb(0, 0, 0);
+  font-size: 30px;
+  
+}
+
+.move-to-bottom{
+  position: absolute;
+  bottom:10px;
 }
 
 /*GRIDS*/
@@ -397,7 +408,6 @@ html {
   .c-grid--2x1{
     grid-template-columns: 2fr 1fr;
     -webkit-box-align: center;
-    align-items:center;
   }
 }
 
@@ -412,6 +422,24 @@ html {
     order: 2;
   }
 }*/
+
+.c-grid--2x3{
+  display: grid;
+  grid-gap: clamp(24px,2.9282576867vw,40px);
+}
+
+
+@media (min-width: 768px) {
+  .c-grid--2x3 {
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 0px;
+  }
+  .c-grid--2x3 > div.is-right {
+    -webkit-box-ordinal-group: 3;
+    order: 2;
+  }
+}
+
 
 .c-grid--3x1 {
   display: grid;
@@ -468,6 +496,26 @@ html {
 .grid-item4 {
   grid-column: 2;
   grid-row: 2;
+}
+
+.grid-item5 {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+.grid-item6 {
+  grid-column: 2;
+  grid-row: 3;
+}
+
+.grid-item7 {
+  grid-column: 1;
+  grid-row: 4;
+}
+
+.grid-item8 {
+  grid-column: 2;
+  grid-row: 4;
 }
 
 /*END OF GRID */
