--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -3,6 +3,7 @@
 @import "./components/navbar/Dropdown.css";
 @import "./components/Footer.css";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,700&display=swap');
 
 :root {
   --primaryColor: #af9a7d;
@@ -26,6 +27,7 @@
   --border: 1px solid #474a4d;
   --border-radius: 8px;
   --speed: 500ms;
+  --italic: 
 }
 
 /* globals */
