--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -3,6 +3,7 @@
 
 // Import a Google Font
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700')
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,700&display=swap')
 
 // Set your brand colors
 $purple: #8a4d76
@@ -16,6 +17,7 @@ $darker: #242526
 
 // Update Bulma's global variables
 $family-sans-serif: 'Poppins', sans-serif
+$family-serif: 'IBM Plex Serif', serif
 $grey-dark: $brown
 $grey-light: $beige-light
 $primary: $purple
