--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -228,11 +228,11 @@ Smooth Scroll --------*/
 
 .homepage {
   overflow: hidden;
-  position: relative;
   margin: 0;
   padding: 0;
   line-height: 1.6;
   height: 100vh;
+  position: relative;
 }
 
 .front-container {
@@ -274,6 +274,8 @@ Smooth Scroll --------*/
 
 .top-container h1{
   color:var(--mainGrey);
+  font-size: 50px;
+  font-weight: 500;
 }
 
 
@@ -294,6 +296,7 @@ section#first {
   background-image: linear-gradient(rgba(62, 61, 61, 0.4), rgba(140, 165, 140, 0.2)), url("../images/hands-rooftop.png");
   background-color: rgba(54, 54, 54, 0.3);
   background-size: cover;
+  position:relative;
   /*background: :url() no-repeat center center/ cover;*/
 }
 
@@ -324,22 +327,77 @@ section#sixth {
 
 /*END SECTIONS */
 
+/*GRID HERO */
+
+.c-grid--3x2{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 100px;
+  height:500px;
+  position: absolute;
+  left:-4.5%;
+  top:-2%;
+}
+
+/*
+@media (min-width: 768px) {
+  .c-grid--3x2 {
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 0px;
+  }
+  .c-grid--3x2 > div.is-right {
+    -webkit-box-ordinal-group: 3;
+    order: 2;
+  }
+}
+*/
+
+.grid-item0--hero{
+  grid-column:1 / 4;
+  grid-row:1;
+}
+
+.grid-item1--hero{
+  grid-column:4;
+  grid-row:1;
+  text-align: center;
+  margin-right:10%;
+  padding-top: 25%;
+}
+
+.grid-item2--hero{
+  grid-column: 3 / 5;
+  grid-row:2; 
+  margin-right:5%;
+  margin-left:5%;
+  text-align: end;
+  justify-content: end;;
+  padding-top: 5%;
+}
+
+.grid-item3--hero{
+  grid-column: 2 / 4;
+  grid-row:3;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  padding-top: 5%;
+  margin-bottom:10%;
+}
+
 
 .flex-items{
   display:flex;
 }
 
 .logo-large {
-  width:70%;
-  margin-left: 0;
-  left:-5%;
-  top:-3%;
+  width:80%;
+  height: auto;
 }
-
 
 .hero-f-punchline{
   width: 100%;
-  padding-bottom:20%;
+  height: 100%;
 }
 
 .hero-f-punchline h1{
@@ -348,9 +406,19 @@ section#sixth {
   color:white;
 }
 
+.list-item{
+  line-height: 3.5em;
+}
+.list-item-icon{
+  height:10px;
+  width:10px;
+  margin-bottom: 15px;
+}
+
 .hero-f-signup{
   color: white;
   margin-left:10%;
+  height: 100%;
 }
 
 .hero-f-signup p{
@@ -384,16 +452,16 @@ section#sixth {
   width:20%;
   font-size: 20px;
   font-weight: 600;
-  padding:1%;
-  
+  margin-left: auto;
+  margin-right: auto;
 }
-
 .arrowDown{
-  width:25%;
-  padding-left:15%;
-  float:right;
+  height:15px;
+  width:15px;
+  margin-left:6%;
 }
 
 .is-white{
   color:white;
 }
+
