preparing to host

--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -834,6 +834,10 @@ color:white;
   padding: 5%;
 }
 
+.padding-section {
+  padding: 1% 5% 5% 5%;
+}
+
 .right {
   position: absolute;
   right: 10%;
