--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -447,6 +447,16 @@ section#sixth {
   margin-left: auto;
 }
 
+.btn-scroll-up {
+  grid-column: 1 / 3;
+  grid-row: 3;
+  width: 20%;
+  height: 20%;
+  margin-top: 40px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .btn-scroll-down-large {
   width: 20%;
   font-size: 20px;
