Adjusting homepage design after meeting with Jo

--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -264,12 +264,13 @@ Smooth Scroll --------*/
   color: var(--mainGrey);
   font-style: italic;
   line-height:1.8em;
-  width:80%;
-  padding-left:10%;
+
 }
 
 .top-container{
-  height:100vh;
+  padding-top:5%;
+  padding-left:10%;
+
 }
 
 .top-container h1{
@@ -385,7 +386,25 @@ section#sixth {
   margin-bottom:10%;
 }
 
+/*FRONT PAGE CONTENT */
 
+.grid-item1--front {
+  grid-column:1;
+  grid-row:1;
+}
+
+.grid-item2--front {
+  grid-column:1;
+  grid-row:2;
+}
+
+.grid-item3--front {
+  grid-column:2;
+  grid-row:1 / 3;
+}
+
+
+/*END */
 .flex-items{
   display:flex;
 }
