cleaning up in  design

--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -81,7 +81,7 @@ body {
 }
 /* end of globals */
 /* Navbar */
-.navbar {
+.nav {
   height: var(--nav-size);
   background: var(--navbarBack_op);
   font-size: 1.2rem;
