--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -267,9 +267,8 @@ Smooth Scroll --------*/
 }
 
 .top-container{
-  padding-top:5%;
   padding-left:10%;
-
+  display: inline-block;
 }
 
 .top-container h1 {
@@ -492,4 +491,19 @@ section#sixth {
 
 .is-white {
   color: white;
+}
+
+.s-container {
+  height:200px;
+  width:100%;
+}
+
+.s-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width:80%;
 }
