--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -46,7 +46,6 @@
 .c-section {
   padding-top: 50px;
   padding-bottom: 50px;
-  overflow: hidden;
   width: 100%;
 }
 
@@ -425,9 +424,9 @@ html {
   grid-gap: 24px;
 }
 
-@media screen and (max-width:600px){
+@media screen and (min-width:650px){
   .c-grid--2x1-equal{
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
   }
 
@@ -501,11 +500,13 @@ html {
   grid-gap:clamp(24px,2.9282576867vw,40px);
 }
 
-@media (min-width:768px){
+@media (min-width:1000px){
   .c-grid--3x3fixed{
     grid-template-columns:repeat(3, 1fr);
   }
 }
+
+
 /*GRID 2x2 */
 .c-grid--2x2 {
   display: grid;
@@ -757,6 +758,39 @@ html {
   /*background: white;
     opacity: 0.8;*/
   cursor: pointer;
+}
+
+.img-wrap {
+  position: relative;
+  height:auto;
+}
+
+.img-wrap img{
+  max-width:100%;
+  max-height: 100%;
+}
+
+.img-descr{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(140, 166, 140, 0.6);
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  /* transition effect. not necessary */
+  transition: opacity .2s, visibility .2s;
+  z-index: 1;
+  padding-top:30%;
+  padding-left:5%;
+}
+
+.img-wrap:hover .img-descr {
+  visibility: visible;
+  opacity: 1;
+  
 }
 
 /*
