--- a/square-root/src/components/navbar/Dropdown.css
+++ b/square-root/src/components/navbar/Dropdown.css
@@ -110,6 +110,40 @@ ul {
   color: var(--bg);
   width: 100%;
   height: 100%;
+  background-color: transparent;
+  border: none;
+}
+
+.d-language-menu {
+  width: 150px;
+  position: absolute;
+  top: 80px;
+  list-style: none;
+  background-color: var(--navbarBack);
+  padding: 1rem;
+  overflow: hidden;
+  box-shadow: 1px 0px 7px 1px rgba(0, 0, 0, 0.5);
+  transition: height var(--speed) ease;
+  z-index: 200;
+}
+
+.d-language {
+  font-size: 1rem;
+  cursor: pointer;
+  display: block;
+  text-align: left;
+  padding: 0.5rem;
+  text-decoration: none;
+  color: var(--bg);
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+}
+
+.d-language:hover {
+  color: var(--offWhite);
+  background: var(--bg)
 }
 
 .d-link:hover {
