--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -1,12 +1,195 @@
-/* Hero */
-.defaultHero {
-  min-height: calc(100vh - var(--nav-size));
-  background: url("../images/defaultBackground.png") center/cover no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+/*----------------------
+Smooth Scroll --------*/
+
+.disable-scrollbars::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* Chrome/Safari/Webkit */
 }
 
+.disable-scrollbars {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
+.homepage {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+  height: calc(100vh - var(--nav-size));
+  position: relative;
+}
+
+.front-container {
+  width: 100%;
+  height: 100%;
+  /* CSS Smooth Scroll */
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+  overflow-y: auto;
+}
+
+/* common for each section */
+.front-container section {
+  width: 100%;
+  height: calc(100vh - var(--nav-size)); /*for all browser sizes*/
+  scroll-snap-align: center;
+}
+
+section p {
+  font-size: 1rem;
+}
+
+.action-btn {
+  background: none;
+  border: none;
+  color: black;
+  font-size: 15px;
+  font-weight: 700px;
+  font-style: italic;
+  padding-top: 5%;
+  width: 40%;
+  height: 15%;
+  text-align: left;
+  margin: 0;
+  max-width: 100%;
+  max-height: auto;
+  transition: all ease-in-out 0.3s;
+}
+
+.action-btn:hover {
+  -ms-transform: scale(0.2); /* IE 9 */
+  -webkit-transform: scale(0.2); /* Safari 3-8 */
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+/* Hero */
+section#first {
+  background-image: linear-gradient(
+      rgba(62, 61, 61, 0.4),
+      rgba(140, 165, 140, 0.2)
+    ),
+    url("../images/hands-rooftop.png");
+  background-color: rgba(54, 54, 54, 0.3);
+  background-size: cover;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1.2fr 0.6fr 1.2fr;
+  grid-template-rows: 1.5fr 1.1fr 0.4fr;
+}
+
+section#first .logo {
+  padding-top: 40px;
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
+
+section#first .logo img {
+  float: left;
+  width: 90%;
+}
+
+section#first .signup {
+  grid-column: 3;
+  grid-row: 1;
+  text-align: center;
+  padding-top: 40px;
+  color: white;
+  height: 100%;
+}
+
+section#first .signup p:not(:first-child),
+button {
+  margin-top: 15px;
+}
+
+section#first .signup button {
+  font-size: 1rem;
+  padding: 0.5% 2%;
+  font-weight: 300;
+  border-radius: 5px;
+  background: none;
+  border: 0.2px solid white;
+  color: white;
+  cursor: pointer;
+}
+
+section#first .signup button:hover {
+  background: var(--mainGreen);
+  border: 0.2px solid var(--mainGreen);
+}
+
+section#first .d {
+  grid-column: 2 / 4;
+  grid-row: 2;
+  margin-right: 5%;
+  margin-left: 5%;
+  text-align: end;
+  justify-content: end;
+}
+
+.hero-f-punchline {
+  width: 100%;
+  height: 100%;
+}
+
+.hero-f-punchline h1 {
+  font-size: 35px;
+  font-weight: 600;
+  color: white;
+}
+
+.list-item {
+  line-height: 3.5em;
+}
+
+.list-item i {
+  font-family: "IBM Plex Serif", serif;
+}
+
+.list-item img {
+  height: 10px;
+  width: 10px;
+  margin-bottom: 15px;
+}
+
+section#first .see-more {
+  grid-column: 2;
+  grid-row: 3;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.see-more button {
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.see-more button img {
+  height: 15px;
+  width: 15px;
+  margin-left: 0.5%;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-f-punchline h1 {
+    font-size: 28px;
+  }
+  .list-item {
+    line-height: 2.7em;
+  }
+
+  .see-more button {
+    font-size: 16px;
+  }
+}
 /* End of Hero */
 /* Banner */
 .errorBanner {
