Changed back to Poppins font

--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -33,6 +33,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-y: auto;
   overflow-x: hidden;
+  font-family: 'Poppins', 'IBM Plex Serif';
 }
 
 a {
