--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -29,6 +29,7 @@
 body {
   background: var(--mainWhite);
   margin: 0;
+  height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-y: auto;
