--- a/square-root/src/pages/user-pages/projects.css
+++ b/square-root/src/pages/user-pages/projects.css
@@ -213,13 +213,9 @@ img[src*="plus"] {
 }
 
 .projects-title {
-  padding-top: 10%;
-  padding-bottom: 5%;
+  padding: 10% 2% 5%;
   width: 100%;
-  float: left;
   background: var(--offWhite);
-  padding-right: 5%;
-  padding-left: 5%;
   height: 100%;
   color: var(--mainBlack);
 }
