fixed user dropdown

--- a/square-root/src/components/navbar/Dropdown.css
+++ b/square-root/src/components/navbar/Dropdown.css
@@ -1,4 +1,4 @@
-ul {
+.drop {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -6,16 +6,15 @@ ul {
 
 .my-dropdown {
   position: absolute;
+  margin-top: 1rem;
   width: 200px;
   background-color: var(--navbarBack);
+  right: 34px;
+  z-index: 200;
   padding: 1rem;
-  overflow: hidden;
+  list-style: none;
   transition: height var(--speed) ease;
   box-shadow: 1px 0px 7px 1px rgba(0, 0, 0, 0.5);
-  z-index: 200;
-  list-style: none;
-  top: var(--nav-size);
-  text-align: start;
 }
 
 .menu {
