--- a/square-root/src/styles/Partner.css
+++ b/square-root/src/styles/Partner.css
@@ -1,16 +1,14 @@
 .form-wrapper{
   display:grid;
-  grid-template-columns: 40% 60%;
-  width:90%;
-  padding:3%;
-  margin:5%;
+  grid-template-columns: 1fr 1fr;
+  width:100%;
   grid-auto-rows: minmax(200px, auto);
   background-color: white;
-  border: 4px solid var(--mainGreen);
 }
 
-.form-box1{
-padding: 5%;
+
+.form-box1 img{
+  width:90%;
 }
 
 .form-box2{
