--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -117,20 +117,30 @@ section#first .d {
 
 section#second{
   position:relative;
-  height:80vh;
+  height:100vh;
 }
 section#third{
   position:relative;
-  height:80vh;
+  height:100vh;
 }
 
 section#fourth{
   position:relative;
-  height:80vh;
+  height:100vh;
 }
 section#fifth{
   position:relative;
-  height:80vh;
+  height:100vh;
+}
+
+section#sixth{
+  position:relative;
+  height:70vh;
+}
+
+section#seventh{
+  position:relative;
+  height:100vh;
 }
 
 .list-item h1 {
@@ -140,7 +150,7 @@ section#fifth{
 }
 
 .list-item {
-  line-height: 3.5em;
+  line-height: 2.5em;
 }
 
 .list-item i {
@@ -152,6 +162,8 @@ section#fifth{
   width: 10px;
   margin-bottom: 15px;
 }
+
+
 
 section#first .see-more {
   grid-column: 2;
@@ -267,14 +279,25 @@ Smooth Scroll --------*/
 
 .main-punchline {
   color: var(--mainGrey);
-  font-style: italic;
   line-height:1.8em;
+  font-size: 20px;
+  text-align: left;
+  width:80%;
+}
 
+.main-punchline--lrg{
+  font-size:25px;
+}
+.main-punchline strong{
+  font-family: 'PoppinsBold';
+  line-height:2em;
 }
 
 .top-container{
   padding-left:10%;
   display: inline-block;
+  vertical-align: middle;
+  justify-content:center;
 }
 
 .top-container h1 {
@@ -423,16 +446,10 @@ Smooth Scroll --------*/
   color: white;
 }
 
-.s-container {
-  height:200px;
+
+em{
+  font-family: 'IBMPlex';
+  font-weight: bold;
+  font-size: 1.3em;
 }
 
-.s-center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  width:100%;
-}
