--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -27,8 +27,6 @@ Smooth Scroll --------*/
   border: none;
   color: black;
   font-size: 15px;
-  font-weight: 700px;
-  font-style: italic;
   padding-top: 5%;
   width: 40%;
   height: 15%;
@@ -46,14 +44,33 @@ Smooth Scroll --------*/
   cursor: pointer;
 }
 
+.btn-call2action{
+    background: white;
+    border: 0;
+    box-sizing: border-box;
+    padding: 1.5em 2.5em;
+    box-shadow: inset 0 0 0 2px var(--mainGreen);
+    color:black;
+    font-size: inherit;
+    font-weight: 700;
+    position: relative;
+    vertical-align: middle;
+    
+}
+
+.btn-call2action:hover{
+  background-color: white;
+  transition:all .2s;
+}
+
 /* Hero */
 section#first {
-  background-image: linear-gradient(
-      rgba(62, 61, 61, 0.4),
-      rgba(140, 165, 140, 0.2)
-    ),
-    url("../images/hands-rooftop.png");
-  background-color: rgba(54, 54, 54, 0.3);
+  background-image:
+  url("../images/background_banner.jpg");
+  background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
+  background: -webkit-linear-gradient(rgba(139, 166, 139, 0.8), rgba(139, 166, 139, 0.8)), url("../images/background_banner.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(139, 166, 139, 0.2)), url("../images/background_banner.jpg"); /* The least supported option. */
+
   background-size: cover;
   position: relative;
   display: grid;
@@ -118,16 +135,26 @@ section#first .d {
 section#second{
   position:relative;
   height:100vh;
+  max-width: fit-content;
 }
 section#third{
   position:relative;
   height:100vh;
+  max-width: fit-content;
 }
 
 section#fourth{
+  background: rgba(139, 166, 139);  /* fallback colour. Make sure this is just one solid colour. */
+  background: -webkit-linear-gradient(rgba(139, 166, 139, 0.8), rgba(139, 166, 139, 0.8));
+  background: linear-gradient(var(--mainGrey), rgba(139, 166, 139, 0.2)); /* The least supported option. */
+  background-size: cover;
   position:relative;
   height:100vh;
+  background-color: var(--mainGrey);
 }
+
+
+
 section#fifth{
   position:relative;
   height:100vh;
@@ -135,7 +162,7 @@ section#fifth{
 
 section#sixth{
   position:relative;
-  height:70vh;
+  height:100vh;
 }
 
 section#seventh{
@@ -150,7 +177,7 @@ section#seventh{
 }
 
 .list-item {
-  line-height: 2.5em;
+  line-height: 1.5em;
 }
 
 .list-item i {
@@ -162,6 +189,7 @@ section#seventh{
   width: 10px;
   margin-bottom: 15px;
 }
+
 
 
 
@@ -277,21 +305,51 @@ section#first .see-more {
 /*----------------------
 Smooth Scroll --------*/
 
+.position-absolute{
+  position: absolute;
+}
 .main-punchline {
   color: var(--mainGrey);
   line-height:1.8em;
-  font-size: 20px;
   text-align: left;
-  width:80%;
+  margin-left: 5%;
 }
 
 .main-punchline--lrg{
-  font-size:25px;
+  font-size:3.5em;
+  line-height: 1em;
+  font-weight: 600;
+  letter-spacing: 0.02em;
+  width:90%;
+  bottom:19%;
 }
 .main-punchline strong{
   font-family: 'PoppinsBold';
   line-height:2em;
 }
+
+.main-punchline--p{
+ font-size: 1.2em;
+ letter-spacing: 0.03em;
+ margin-top: 3%;
+ width:70%;
+ line-height: 1.7em;
+}
+
+.short-border{
+  border: 3px solid var(--mainGrey);
+  width:5%;
+  bottom:0;
+  margin-left: 3%;
+}
+
+.short-border-white{
+  border: 3px solid white;
+  width:5%;
+  bottom:0;
+  margin-left: 3%;
+}
+
 
 .top-container{
   padding-left:10%;
@@ -304,6 +362,10 @@ Smooth Scroll --------*/
   color: var(--mainGrey);
   font-size: 50px;
   font-weight: 500;
+}
+
+.light-green{
+  color:#84a086;
 }
 
 /*GRID HERO */
