--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -30,7 +30,10 @@
   letter-spacing: -.03em;
 }
 
-
+.column-img{
+  width: 100%;
+  height: auto;
+}
 .c-container {
   text-align: inherit;
 }
@@ -55,10 +58,18 @@
   width: 100%;
 }
 
+
 .c-section img {
   display:block;
-  margin:auto;
   max-height: 15em;
+}
+
+.c-section--p{
+  max-width:inherit;
+}
+
+.c-section--container{
+  max-width:100%;
 }
 
 .quote{
@@ -111,11 +122,11 @@ dt:first-child {
 }
 
 .o-container {
-  padding-left: 20px;
+  margin-left: 2%;
   padding-right: 20px;
-  margin:auto;
   max-width: calc(1200px + 2 * 20px);
   text-align: inherit;
+  padding-top:15vh;
 }
 
 .o-container--sm{
@@ -126,6 +137,13 @@ dt:first-child {
   width:50%;
 }
 
+.grid-container{
+  padding-left: 20px;
+  padding-right: 20px;
+  margin:auto;
+  max-width: calc(1200px + 2 * 20px);
+  text-align: inherit;
+}
 @media (min-width: 1024) {
   .o-container {
     padding-left: 60px;
@@ -220,6 +238,7 @@ dt:first-child {
 
 }
 
+
 .featured-concept--h1 {
   color: rgb(0, 0, 0);
   font-size: 30px;
@@ -241,6 +260,14 @@ dt:first-child {
   grid-template-columns: var(--gutter) 1fr var(--gutter);
   align-content: start;
   width: 100%;
+}
+
+.grid--1x-vertical{
+  display:grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap:0.5em;
+  width: 30%;
 }
 
 .no-scroll-grid {
@@ -430,8 +457,8 @@ html {
 .c-grid--3x1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: clamp(24px, 2.9282576867vw, 40px);
-}
+  grid-template-rows: 1fr 1fr auto;
+  }
 
 .c-grid--4x1 {
   display: grid;
@@ -446,9 +473,23 @@ html {
   grid-gap:clamp(24px,2.9282576867vw,40px);
 }
 
-@media (min-width:1000px){
+@media (min-width:1150px){
   .c-grid--3x3fixed{
     grid-template-columns:repeat(3, 1fr);
+  }
+}
+
+@media (max-width:1150px){
+  .c-grid--3x3fixed{
+    grid-template-columns:repeat(2, 1fr);
+    max-width:50%;
+  }
+}
+
+@media (max-width:800px){
+  .c-grid--3x3fixed{
+    grid-template-columns:repeat(1, 1fr);
+    max-width:30%;
   }
 }
 
@@ -466,6 +507,7 @@ html {
 @media (min-width: 768px) {
   .c-grid--2x2 {
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr auto;
   }
 }
 
@@ -480,6 +522,15 @@ html {
   grid-row: 1;
 }
 
+.grid-item1, .grid-item3 {
+  justify-content: center;
+  align-content: center;
+}
+
+.grid-item3-vertical{
+  grid-column: 3;
+  grid-row: 1 / 3;
+}
 .grid-item2 {
   grid-column: 1;
   grid-row: 2;
@@ -515,11 +566,34 @@ html {
   grid-row: 4;
 }
 
+.grid-item1-stretch{
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
 
+.grid-item2-stretch{
+  grid-column: 2 / 4;
+  grid-row: 1;
+}
 
+.grid-item2-stretch1{
+  grid-column: 1 / 3;
+  grid-row:2 / 3;
+}
+
+.grid-item2-stretch2{
+  grid-column: 2 / 4;
+  grid-row: 2;
+}
+
+.grid-item2x2 {
+  grid-column: 1 / 3;
+  grid-row:2 / 3;
+}
 
 
 /*END OF GRID */
+
 
 .c-grid--span {
   display: grid;
@@ -587,6 +661,12 @@ html {
   display:block;
   margin-bottom: 2em;
   width:60%;
+}
+
+.o-form__group-full {
+  display:block;
+  margin-bottom: 2em;
+  width:100%;
 }
 
 .o-form__heading {
@@ -806,7 +886,7 @@ color:white;
   justify-content: right;
 }
 .strong--m {
-  font-size: 18px;
+  font-size: 18em;
 }
 
 
