--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -31,7 +31,7 @@
 }
 
 .column-img{
-  width: 100%;
+  width: 90%;
   height: auto;
 }
 .c-container {
@@ -463,6 +463,7 @@ html {
 .c-grid--4x1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
   grid-gap: clamp(24px, 2.9282576867vw, 40px);
 }
 
@@ -493,6 +494,28 @@ html {
   }
 }
 
+.c-grid--fill{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 1rem;
+}
+
+.c-grid--fill > div {
+  background: white;
+  padding: 1rem;
+}
+
+
+.c-grid--fill > div::before, 
+.c-grid--fill > div > img {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.c-grid--fill > div > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 
 /*GRID 2x2 */
 .c-grid--2x2 {
@@ -566,6 +589,15 @@ html {
   grid-row: 4;
 }
 
+.grid-item9{
+  grid-column:3;
+  grid-row:1;
+}
+
+.grid-item10{
+  grid-column:3;
+  grid-row:2;
+}
 .grid-item1-stretch{
   grid-column: 1 / 3;
   grid-row: 1;
@@ -789,15 +821,62 @@ html {
   cursor: pointer;
 }
 
-.img-wrap {
+.img-wrap-rooftop{
+  background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url(../images/landscape--rooftop_redigert.png);
+  background-size: cover;
+  width: 90%;
+  height: 100%;
   position: relative;
-  height:auto;
+  float: left;
+  color:white;
+  font-size: 3em;
 }
 
-.img-wrap img{
-  max-width:100%;
-  max-height: 100%;
+.img-wrap-rainbed{
+  background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url(../images/leaf_rooftop_4_redigert.jpg);
+  background-size: cover;
+  width: 90%;
+  height: 100%;
+  position: relative;
+  float: left;
+  color:white;
+  font-size: 3em;
 }
+
+.img-wrap-indoor{
+  background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url(../images/landscape--indoor_redigert.jpg);
+  background-size: cover;
+  width: 90%;
+  height: 100%;
+  position: relative;
+  float: left;
+  color:white;
+  font-size: 3em;
+}
+
+.u-txt--middle{
+  position:absolute;
+  top:50%;
+  bottom:50%;
+  left:10%;
+}
+
+
 
 .img-descr{
   position: absolute;
@@ -822,19 +901,12 @@ html {
   
 }
 
-/*
+
 .img-overlay {
-position: absolute;
-  top: 85%;
-  bottom: 0%;
-  left: 60%;
-  right:0;
-  height: 15%;
-  width: 40%;
-  opacity: 0;
-  transition: .5s ease;
+  opacity: 0.6;
   background-color: white;
 }
+/*
 .white-on-hover{
     position:relative;
 }
@@ -842,20 +914,22 @@ position: absolute;
     opacity:1;
 }
 
+*/
 
 .text-overlay{
-color:white;
-  font-size: 20px;
+  font-size: 2em;
   position: absolute;
-  bottom: 0%;
-  right: 0%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
+  top:50%;
+  bottom:50%;
+  left:50%;
+  right:50%;
+  width:100%;
+  color:var(--mainGrey);
+  background:#ffffff; /* Fallback color */
+  background: rgba(255, 255, 255 0.5);
 }
 
-*/
+
 /*END ON HOVER'S */
 
 /* SPECIFIC STYLING */
