--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -122,19 +122,28 @@ dt:first-child {
 }
 
 .o-container {
-  margin-left: 2%;
-  padding-right: 20px;
+  margin-left: 5%;
+  margin-right: 2%;
   max-width: calc(1200px + 2 * 20px);
   text-align: inherit;
-  padding-top:15vh;
+}
+
+.o-container--lrg {
+  margin-top:8%;
+  margin-bottom:8%;
+  max-width: calc(1200px + 2 * 20px);
+  text-align: inherit;
+  padding:2%;
 }
 
 .o-container--sm{
-  padding-left: 20px;
-  padding-right: 20px;
+  padding:2%;
+  width:100%;
   margin:auto;
-  text-align: inherit;
-  width:50%;
+}
+
+.bckgd-white{
+background-color: white;
 }
 
 .grid-container{
@@ -180,6 +189,10 @@ dt:first-child {
 .c-section--cta {
   padding-top: clamp(24px, 8.1991215227vw, 112px);
   text-align: center;
+}
+
+.c-section--pad-vh{
+  padding-top: 15vh;
 }
 
 .u-txt--center {
@@ -390,15 +403,10 @@ html {
 
 .c-grid--2x1 {
   display: grid;
-  grid-gap: clamp(24px,2.9282576867vw,40px);
+  grid-template-columns: 1fr 1fr;
 }
 
-@media (min-width:1162px){
-  .c-grid--2x1{
-    grid-template-columns: 2fr 1fr;
-    -webkit-box-align: center;
-  }
-}
+
 
 
 @media screen and (min-width:650px){
@@ -455,16 +463,28 @@ html {
 
 
 .c-grid--3x1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr auto;
-  }
+  
+}
+
+@media (min-width:1000px){
+  .c-grid--3x1{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr auto;
+}
+}
+@media (max-width:999px){
+  .c-grid--3x1{
+    grid-template-columns: 1fr 0 1fr 1fr;
+    max-width:50%;
+}
+}
 
 .c-grid--4x1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
-  grid-gap: clamp(24px, 2.9282576867vw, 40px);
+  grid-gap: 5em;
 }
 
 
@@ -496,8 +516,8 @@ html {
 
 .c-grid--fill{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
+  grid-gap: 0.5rem;
 }
 
 .c-grid--fill > div {
@@ -598,6 +618,11 @@ html {
   grid-column:3;
   grid-row:2;
 }
+
+.grid-item11{
+  grid-column:4;
+  grid-row:1;
+}
 .grid-item1-stretch{
   grid-column: 1 / 3;
   grid-row: 1;
@@ -668,6 +693,7 @@ html {
 }
 
 /*END OF GRIDS*/
+
 
 /* CONTACT FORM */
 
@@ -963,6 +989,9 @@ html {
   font-size: 18em;
 }
 
+.left-margin{
+  margin-left:3%;
+}
 
 .u-mrg--reset p {
   margin: 0 0 1em;
