updated footer with correct email and phone number

--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -26,7 +26,8 @@
 }
 
 /* globals */
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
 }
@@ -40,7 +41,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-y: auto;
   overflow-x: hidden;
-  font-family: 'Poppins', 'IBM Plex Serif';
+  font-family: "Poppins", "IBM Plex Serif";
   color: #3e3d3d;
 }
 
