--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -1,6 +1,6 @@
 /*----------------------
 Smooth Scroll --------*/
-.front-container {	
+.front-container {
   scroll-behavior: smooth;
   overscroll-behavior-y: contain;
   scroll-snap-type: y mandatory;
@@ -13,7 +13,7 @@ Smooth Scroll --------*/
 /* common for each section */
 .front-container section {
   width: 100%;
-  height: calc(100vh - var(--nav-size));
+  height: 100vh;
   scroll-snap-align: center;
   position: relative;
 }
@@ -22,60 +22,23 @@ Smooth Scroll --------*/
   font-size: 1rem;
 }
 
-.action-btn {
-  background: none;
-  border: none;
-  color: black;
-  font-size: 15px;
-  padding-top: 5%;
-  width: 40%;
-  height: 15%;
-  text-align: left;
-  margin: 0;
-  max-width: 100%;
-  max-height: auto;
-  transition: all ease-in-out 0.3s;
-}
-
-.action-btn:hover {
-  -ms-transform: scale(0.2); /* IE 9 */
-  -webkit-transform: scale(0.2); /* Safari 3-8 */
-  transform: scale(1.1);
-  cursor: pointer;
-}
-
-.btn-call2action{
-    background: white;
-    border: 0;
-    box-sizing: border-box;
-    padding: 1.5em 2.5em;
-    box-shadow: inset 0 0 0 2px var(--mainGreen);
-    color:black;
-    font-size: inherit;
-    font-weight: 700;
-    position: relative;
-    vertical-align: middle;
-    
-}
-
-.btn-call2action:hover{
-  background-color: white;
-  transition:all .2s;
-}
-
 /* Hero */
 section#first {
-  background-image:
-  url("../images/background_banner.jpg");
-  background: #C33764;  /* fallback colour. Make sure this is just one solid colour. */
-  background: -webkit-linear-gradient(rgba(139, 166, 139, 0.8), rgba(139, 166, 139, 0.8)), url("../images/background_banner.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(139, 166, 139, 0.2)), url("../images/background_banner.jpg"); /* The least supported option. */
-
+  background-image: url("../images/background_banner.jpg");
+  background: #c33764; /* fallback colour. Make sure this is just one solid colour. */
+  background: -webkit-linear-gradient(
+      rgba(139, 166, 139, 0.8),
+      rgba(139, 166, 139, 0.8)
+    ),
+    url("../images/background_banner.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(139, 166, 139, 0.2)),
+    url("../images/background_banner.jpg"); /* The least supported option. */
   background-size: cover;
   position: relative;
   display: grid;
   grid-template-columns: 1.2fr 0.6fr 1.2fr;
   grid-template-rows: 1.5fr 1.1fr 0.4fr;
+  height: calc(100vh - var(--nav-size));
 }
 
 section#first .logo {
@@ -89,38 +52,19 @@ section#first .logo img {
   width: 90%;
 }
 
-section#first .signup {
-  grid-column: 3;
-  grid-row: 1;
-  text-align: center;
-  padding-top: 40px;
-  color: white;
-  height: 100%;
-  width: fit-content;
-  margin-left: auto;
-  margin-right: 10%;
-}
-
-section#first .signup p {
-  font-size: 18px;
-}
-
-section#first .signup p:not(:first-child) {
-  margin-top: 15px;
-}
-
 section#first .signup-btn button {
   font-size: 0.8rem;
   background: none;
   border: 0.2px solid white;
   color: white;
   cursor: pointer;
-  padding:2%;
+  padding: 2%;
 }
 
 section#first .signup-btn button:hover {
   transition: 0.5s;
-  -webkit-transform: scale(1.2); 
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
   font-weight: 400;
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -132,80 +76,6 @@ section#first .d {
   margin-left: 5%;
   text-align: end;
   justify-content: end;
-}
-
-section#second{
-  position:relative;
-  height:100vh;
-  max-width: fit-content;
-}
-section#third{
-  position:relative;
-  height:100vh;
-  max-width: fit-content;
-}
-
-section#fourth{
-  position:relative;
-  height:100vh;
-}
-
-
-
-section#fifth{
-  position:relative;
-  height:100vh;
-  background-image: url("../images/boots.jpg");
-  background-size: cover;
-}
-
-section#sixth{
-  background-size: cover;
-  position:relative;
-  height:100vh;
-  background-color: var(--mainGrey);
-}
-
-section#seventh{
-  position:relative;
-  height:100vh;
-}
-
-section#eight{
-  position:relative;
-  height:100vh;
-}
-
-section#ninth{
-  position:relative;
-  height:100vh;
-}
-
-.list-item h1 {
-  font-size: 35px;
-  font-weight: 600;
-  color: white;
-  line-height: 1.2em;
-  letter-spacing: 0.03;
-}
-
-.list-item {
-  line-height: 1.5em;
-}
-
-.list-item i {
-  font-family: "IBM Plex Serif", serif;
-}
-
-.list-item img {
-  height: 10px;
-  width: 10px;
-  margin-bottom: 15px;
-}
-
-
-.container-white{
-  background-color:white;
 }
 
 section#first .see-more {
@@ -233,53 +103,64 @@ section#first .see-more {
 }
 
 @media screen and (max-width: 768px) {
-  .list-item h1 {
-    font-size: 28px;
-  }
-  section#first .signup p {
-    font-size: 16px;
-  }
-  .list-item {
-    line-height: 2.7em;
-  }
-
   .see-more button {
     font-size: 16px;
   }
 }
 /* End of Hero */
 
-
-/* CONCEPT container
-.imagebox {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
+section#second {
+  max-width: fit-content;
+}
+section#third {
+  max-width: fit-content;
 }
 
-.imagebox span {
-  padding-left: 3%;
-  padding-top: 50%;
-  padding-right: 10%;
-  position: relative;
-  bottom: 0px;
+section#fifth {
+  background-image: url("../images/boots.jpg");
+  background-size: cover;
 }
 
-.image {
-  height: 550px;
-  width: 850px;
-  overflow: hidden;
-  padding-top: 8%;
-  padding-left: 6%;
+section#sixth {
+  height: 100vh;
+  background-color: var(--mainGrey);
 }
 
-.imagebox-h1 {
-  color: rgb(0, 0, 0);
-  display: flex;
-  align-items: center;
-  font-size: 30px;
+.list-item h1 {
+  font-size: 35px;
+  font-weight: 600;
+  color: white;
+  line-height: 1.2em;
+  letter-spacing: 0.03;
 }
-*/
+
+.list-item {
+  line-height: 1.5em;
+}
+
+.list-item i {
+  font-family: "IBM Plex Serif", serif;
+}
+
+.list-item img {
+  height: 10px;
+  width: 10px;
+  margin-bottom: 15px;
+}
+
+.container-white {
+  background-color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .list-item h1 {
+    font-size: 28px;
+  }
+
+  .list-item {
+    line-height: 2.7em;
+  }
+}
 
 .bd-notification {
   padding-top: 40px;
@@ -317,215 +198,60 @@ section#first .see-more {
   width: 40%;
 }
 
-/*----------------------
-Smooth Scroll --------*/
-
-.position-absolute{
+.position-absolute {
   position: absolute;
 }
 .main-punchline {
   color: var(--mainGrey);
-  line-height:1.8em;
+  line-height: 1.8em;
   text-align: left;
   margin-left: 5%;
 }
 
-.main-punchline--lrg{
-  font-size:3.5em;
+.main-punchline--lrg {
+  font-size: 3.5em;
   line-height: 1em;
   font-weight: 600;
   letter-spacing: 0.02em;
-  width:90%;
-  bottom:19%;
+  width: 90%;
+  bottom: 19%;
 }
-.main-punchline strong{
-  font-family: 'PoppinsBold';
-  line-height:2em;
-}
-
-.main-punchline--p{
- font-size: 1.2em;
- letter-spacing: 0.03em;
- margin-top: 3%;
- width:70%;
- line-height: 1.7em;
+.main-punchline strong {
+  font-family: "PoppinsBold";
+  line-height: 2em;
 }
 
-.short-border{
+.main-punchline--p {
+  font-size: 1.2em;
+  letter-spacing: 0.03em;
+  margin-top: 3%;
+  width: 70%;
+  line-height: 1.7em;
+}
+
+.short-border {
   border: 3px solid var(--mainGrey);
-  width:5%;
-  bottom:0;
+  width: 5%;
+  bottom: 0;
 }
 
-.short-border-white{
+.short-border-white {
   border: 3px solid white;
-  width:5%;
-  bottom:0;
+  width: 5%;
+  bottom: 0;
   margin-left: 3%;
 }
 
-
-.top-container{
-  padding-left:10%;
-  display: inline-block;
-  vertical-align: middle;
-  justify-content:center;
-}
-
-.top-container h1 {
-  color: var(--mainGrey);
-  font-size: 50px;
-  font-weight: 500;
-}
-
-.light-green{
-  color:#84a086;
-}
-
-/*GRID HERO */
-
-.c-grid--3x2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 100px;
-  height: 500px;
-  position: absolute;
-  left: -4.5%;
-  top: -2%;
-}
-
-/*
-@media (min-width: 768px) {
-  .c-grid--3x2 {
-    grid-template-columns: repeat(2, 1fr);
-    padding-bottom: 0px;
-  }
-  .c-grid--3x2 > div.is-right {
-    -webkit-box-ordinal-group: 3;
-    order: 2;
-  }
-}
-*/
-
-.grid-item0--hero {
-  grid-column: 1 / 4;
-  grid-row: 1;
-  padding-left: 5%;
-}
-
-.grid-item1--hero {
-  grid-column: 4;
-  grid-row: 1;
-  text-align: center;
-  margin-right: 10%;
-  padding-top: 20%;
-}
-
-.grid-item2--hero {
-  grid-column: 3 / 5;
-  grid-row: 2;
-  margin-right: 5%;
-  margin-left: 5%;
-  text-align: end;
-  justify-content: end;
-}
-
-.grid-item3--hero {
-  grid-column: 2 / 4;
-  grid-row: 3;
-  display: flex;
-  align-items: center;
-  justify-items: center;
-  margin-bottom: 20%;
-}
-
-/*FRONT PAGE CONTENT */
-
-.grid-item1--front {
-  grid-column:1;
-  grid-row:1;
-}
-
-.grid-item2--front {
-  grid-column:1;
-  grid-row:2;
-}
-
-.grid-item3--front {
-  grid-column:2;
-  grid-row:1 / 3;
-}
-
-
-/*END */
-.flex-items{
-  display:flex;
-}
-
-.hero-f-signup {
-  color: white;
-  margin-left: 10%;
-  height: 100%;
-}
-
-.hero-f-signup p {
-  font-size: 0.9rem;
-  color: white;
-  font-weight: 500;
-}
-
-.front-btn {
-  font-size: 1rem;
-  padding-right: 2%;
-  padding-left: 2%;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  font-weight: 300;
-  border-radius: 5px;
-  background: none;
-  border: 0.2px solid white;
-  color: white;
-}
-
-.btn-scroll-down {
-  grid-column: 1 / 3;
-  grid-row: 3;
-  width: 20%;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.btn-scroll-up {
-  grid-column: 1 / 3;
-  grid-row: 3;
-  width: 20%;
-  height: 20%;
-  margin-top: 40px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.btn-scroll-down-large {
-  width: 20%;
-  font-size: 20px;
-  font-weight: 600;
-  margin-left: auto;
-  margin-right: auto;
-}
-.arrowDown {
-  height: 15px;
-  width: 15px;
-  margin-left: 6%;
+.light-green {
+  color: #84a086;
 }
 
 .is-white {
   color: white;
 }
 
-
-em{
-  font-family: 'IBMPlex';
+em {
+  font-family: "IBMPlex";
   font-weight: bold;
   font-size: 1.3em;
 }
-
