adjusting footer on the home page

--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -126,6 +126,10 @@ section#sixth {
   background-color: var(--mainGrey);
 }
 
+section#footer {
+  height: calc(100vh - var(--nav-size));
+}
+
 .list-item h1 {
   font-size: 35px;
   font-weight: 600;
