linked hero button to contact

--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -125,7 +125,7 @@ section#fifth {
   background-size: cover;
 }
 
-section#sixth {
+section#contact {
   height: 100vh;
   background-color: var(--mainGrey);
 }
